--- a/conf/app.conf
+++ b/conf/app.conf
@@ -13,7 +13,7 @@ app.name = gogobuild
 # (and detect) user modification.
 # Keep this string secret or users will be able to inject arbitrary cookie values
 # into your application
-app.secret =
+app.secret = 
 
 
 # The IP address on which to listen.
@@ -93,7 +93,13 @@ i18n.default_language = en
 # Allows Routes like this:
 #  `Static.ServeModule("modulename","public")`
 module.static=github.com/revel/modules/static
+module.jobs = github.com/revel/modules/jobs
+jobs.pool = 4
 
+distant_user = ""
+distant_ip = ""
+distant_folder = ""
+local_repo_folder = ""
 
 
 ################################################################################
