--- a/conf/app.conf
+++ b/conf/app.conf
@@ -13,11 +13,11 @@ app.name = gogobuild
 # (and detect) user modification.
 # Keep this string secret or users will be able to inject arbitrary cookie values
 # into your application
-app.secret = 
+app.secret =
 
 
 # The IP address on which to listen.
-http.addr =
+http.addr = localhost
 
 # The port on which to listen.
 http.port = 9000
@@ -95,11 +95,12 @@ i18n.default_language = en
 module.static=github.com/revel/modules/static
 module.jobs = github.com/revel/modules/jobs
 jobs.pool = 4
+jobs.selfconcurrent = false
 
-distant_user = ""
-distant_ip = ""
-distant_folder = ""
-local_repo_folder = ""
+local_tmp_folder=
+mail.smtp=
+mail.name=
+mail.addr=
 
 
 ################################################################################
